# vectorwrap

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.cast  demo.db  demo.py  pyproject.toml  test_vectorwrap.py
.github/: workflows
.github/workflows/: ci.yml
bench/: README.md  SAMPLE_RESULTS.md  bench_10k.ipynb  benchmark.py  visualize.py
docs/: INTEGRATIONS.md
examples/: demo.sh  demo_notebook.ipynb  langchain_example.py  supabase_example.py
tests/: test_wrap.py
vectorwrap/: mysql_backend.py  pyproject.toml
