[project]
name = "vectorwrap"
version = "0.3.0a2"          # bump the patch/alpha tag
description = "One API for vector search across Postgres (pgvector), MySQL HeatWave, and SQLite"
authors = [{name = "<YOU>", email = "you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "psycopg[binary]>=3.1",
  "mysql-connector-python>=8.3",
  "numpy>=1.26"
]

[project.optional-dependencies]
sqlite = ["pysqlite3>=0.5.0", "sqlite-vss>=0.1.2"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"