[project]
name = "vectorwrap"
version = "0.1.0"
description = "One API for vector search on PostgreSQL (pgvector) – proof‑of‑concept"
authors = [{name="Your Name", email="you@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "psycopg[binary]>=3.1",
  "numpy>=1.26"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
